User management done. Close #1